# 05.homework

./: CMakeLists.txt  statistics.cpp
include/: max.h  mean.h  min.h  statistics.h  std.h
src/: max.cpp  mean.cpp  min.cpp  std.cpp
